# router/user.go
@@ -12,6 +12,8 @@ func InitUserRouter(Router *gin.RouterGroup) {
 		UserRouter.POST("/register", v1.Register)
 		UserRouter.POST("/login", v1.Login)
 		UserRouter.POST("/info", v1.ShowUserInfo)
+		UserRouter.POST("/update_password", v1.UpdatePassword)
+		UserRouter.POST("/update_info", v1.UpdateInfo)
 		UserRouter.POST("/test", v1.Test)
 	}
 }
